# kroc

./: .gitignore  .project  AUTHORS  BUGS  CHANGELOG  Makefile.am  Makefile.in  README  README.MD  README.md  SConstruct  SVN-VERSION  aclocal.m4  build  configure  configure.ac  configure.in  kmakef  kmakef.1  kroc.1  kroc.conf.5  kroc.in  occbuild.in  occbuild.m4  setup.csh.in  setup.sh.in
demos/bar/: Makefile.am  Makefile.in  configure  configure.ac
demos/bar/autom4te.cache/: output.0  traces.0  traces.1
demos/game/: Makefile.am  Makefile.in  config.inc  config.inc.in  configure  configure.ac  game-bots.occ  game-client.occ  game-control.occ  game-irc.occ  game-linc.occ  game-objects.occ  game-room.occ  game-tty.occ  game-ttysocket.occ  game-utils.occ  game.occ  ircplug.occ  student-bots.occ  types.inc
demos/game/autom4te.cache/: output.1  traces.0  traces.1
demos/game/data/: Makefile.in  attic1.desc  attic2.desc  attic3.desc  bar1.desc  bar2.desc  bar4.desc  battlements1.desc  battlements5.desc  bed2.desc  bed3.desc  bed4.desc  candlestick.odesc  cc03.desc  cellar1.desc  cellar2.desc  cellar3.desc  cellar4.desc  cellar5.desc  cellar7.desc  cookies.odesc  cottage1.desc  cottage2.desc  cw15.desc  cw21.desc  cw22.desc  cw23.desc  cw24.desc  cw27.desc  cw32.desc  cw33.desc  cw34.desc  dining.desc  ducting1.desc  ducting2.desc  entrance.desc  garden1.desc  garden2.desc  garden4.desc  garden5.desc  (+50 more)
demos/robots/: Makefile.am  Makefile.in  angle.inc  arc.inc  circle.inc  colours.inc  configure  configure.ac  copy.inc  cordic.inc  disc.inc  disc2.inc  dither.inc  fan.inc  graphics.inc  graphics.occ  hit.inc  line.inc  lines.inc  pack.inc  palette.inc  particles-ats.occ  rectangle.inc  robot.occ  robot2.occ  robot3.occ  spectrum.inc  wallpaper.inc
demos/robots/autom4te.cache/: output.1  traces.0  traces.1
demos/shootout/: Makefile.am  Makefile.in  chameneos-redux.occ  chameneos.occ  cheap-concurrency.occ  configure  configure.ac  fannkuch.occ  fasta.occ  mandelbrot.occ  pidigits.occ  random.occ  reverse-complement.occ  spectralnorm.occ  startup.occ  thread-ring.occ  threads-flow.occ  threads.occ
demos/shootout/autom4te.cache/: output.1  requests  traces.0  traces.1
demos/ttygames/: Makefile.am  Makefile.in  bomberman.occ  configure  configure.ac  mandelbrot.occ  occman.occ
demos/ttygames/autom4te.cache/: output.1  traces.0  traces.1
doc/: AUTHORS  Makefile.am  Makefile.in  OLD-AUTHORS  README  about-kroc.txt  aclocal.m4  blocking-native.ps  bsclib.ps  configure  configure.ac  essentially-kroc.txt  kroc-faq.html  moinmoinwiki-nocc-langdef.py  moinmoinwiki-occampi.py  native-call.ps  o2cl.ms  o2cl.ps  o2cl.txt  signal-proposal.txt  udc.ps  udo.ps
doc/api/: Makefile.am  Makefile.in
doc/autom4te.cache/: output.1  requests  traces.0  traces.1
doc/lib/: Makefile.am  Makefile.in  college.lbb  controller.occ  crew_test.occ  timekeeper.occ
doc/sc/: Makefile.am  Makefile.in  blackboard.inc  control_info.inc  crew_test.occ  display.inc  display.occ  philosopher.occ
runtime/ccsp/: Makefile.am  Makefile.in  README  aclocal.m4  ccsp-1.6.pc.in  config.h.in  configure  configure.ac  test1.c
runtime/ccsp/autom4te.cache/: output.0  requests  traces.0  traces.1
runtime/ccsp/common/: Makefile.am  Makefile.in  dmem.c  dtrace.c  mobproc.c  nmem.c  pgroup.c  rtsmain.c  timercal.c  userproc.c
runtime/ccsp/include/: Makefile.am  Makefile.in  bsyscalls_if.h  ccsp.h  ccsp_cif.h  ccsp_config.h.in  ccsp_consts.h  ccsp_if.h  ccsp_pony.h  ccsp_timer.h  compiler.h  deadlock.h  debug.h  dmem_if.h  dtrace.h  dynproc.h  inlining.h  kernel.h  kiface.h  mobile_types.h  mobproc.h  mwsync.h  pgroup.h  rts.h  sched_consts.h  sched_types.h  typedesc.h  ukcthreads_types.h
runtime/ccsp/kernel/: Makefile.am  Makefile.in  bsyscalls.c  cspdriver.c  deadlock.c  dynproc.c  entry.c  sched.c  stats.c
runtime/ccsp/utils/: Makefile.am  Makefile.in  make-header.py
runtime/libkrocif/: Makefile.am  Makefile.in  aclocal.m4  config.h.in  configure  configure.ac
runtime/libkrocif/autom4te.cache/: output.0  requests  traces.0  traces.1
runtime/libkrocif/include/: Makefile.am  Makefile.in  kroc_io.h  rts.h  tlpcodes.h
runtime/libkrocif/io/: Makefile.am  Makefile.in  input.occ  io.c  output.occ
runtime/libkrocif/rts/: Makefile.am  Makefile.in  error.c  occam_entry.c  rtsmain.c  tty.c  userproc.c
runtime/libkrocif/support/: Makefile.am  Makefile.in  spunix.c
runtime/libtvm/: Makefile.am  Makefile.in  SConscript  TEncode  aclocal.m4  config.h.in  configure  configure.ac  dispatch_ins.c  dmem.c  dmem.h  ext_chan.c  ext_chan.h  ffi_tables.h  hook_debug.h  hook_timer.h  ins_alt.c  ins_alt.h  ins_barrier.c  ins_barrier.h  ins_chan.c  ins_chan.h  ins_float.c  ins_float.h  ins_fred.c  ins_fred.h  ins_mobile.c  ins_mobile.h  ins_mt.c  ins_mt.h  ins_pi.c  ins_pi.h  ins_pri.c  ins_pri.h  ins_proc.c  ins_proc.h  ins_rmox.c  ins_rmox.h  ins_sec.c  ins_sec.h  (+45 more)
runtime/libtvm/autom4te.cache/: output.1  requests  traces.0  traces.1
tests/cgtests/: Makefile.am  Makefile.in  README  aclocal.m4  cg10byte.occ  cg10i16.occ  cg10i64.occ  cg10int.occ  cg10r32.occ  cg10r64.occ  cg50myi.occ  cg50myr.occ  cg57type.occ  cg58arr.occ  cg60myr.occ  cg66cnvt.occ  cg67cplx.occ  cglib.occ  cgmain.occ  cgreal.occ  cgtest00.occ  cgtest01.occ  cgtest02.occ  cgtest03.occ  cgtest04.occ  cgtest05.occ  cgtest06.occ  cgtest07.occ  cgtest08.occ  cgtest09.occ  cgtest10.occ  cgtest11.occ  cgtest12.occ  cgtest13.occ  cgtest14.occ  cgtest15.occ  cgtest17.occ  cgtest19.occ  cgtest23.occ  cgtest24.occ  (+39 more)
tests/cgtests/autom4te.cache/: output.0  traces.0  traces.1
tests/hereticc/: Makefile.am  Makefile.in  configure  configure.ac  hereticc.occ
tests/hereticc/autom4te.cache/: output.0  traces.0  traces.1
tests/occbench/: Makefile.am  Makefile.in  buildbot-scrap  configure  configure.ac  occbench
tests/occbench/benchmarks/: fft2.occ  (+6 more)
tools/LLVMTailCallFix/: Makefile  Makefile.am  TailCallFix.cpp  configure.ac
tools/brickload/: Makefile.am  brickload.c  brickload.h  configure.ac  flash_driver.h  mac.c  nix.c  nxt.c  rcx.c  rxt.c  win.c
(+4211 files in other folders)
